# jax-imprl

./: .gitignore  README.md  pyproject.toml
examples/: rollout.py
jax_imprl/agents/: README.md
jax_imprl/agents/configs/: DDQN.yaml
jax_imprl/agents/modules/: schedulers.py
jax_imprl/agents/primitives/: MLP.py  agent.py
jax_imprl/structural_envs/: __init__.py  baselines.yaml  jax_k_out_of_n.py  joint_wrapper.py
jax_imprl/structural_envs/env_configs/: hard-1-of-5.yaml  hard-2-of-5.yaml  hard-3-of-5.yaml  hard-4-of-5.yaml  hard-5-of-5.yaml
profile/: README.md  jax_vs_numpy.py  numpy_k_out_of_n.py
tests/: test_env.py
